[package]
name = "flooder"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

# client
[dependencies.substrate-api-client]
git = "https://github.com/Cardinal-Cryptography/substrate-api-client.git"
tag = "polkadot-v0.9.13.metav14"

[dependencies]
# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", features = ["full_crypto"] }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }

# other dependencies
zip = "0.5"
anyhow = "^1.0"
clap = {version = "3.0.0-beta.5", features = ["derive"]}
codec = { package = 'parity-scale-codec', version = "2.0.0", features = ['derive']}
common = {path = "../common" }
env_logger = "0.8"
futures = { version = "0.3", features = ["alloc"] }
hdrhistogram = "7.3.0"
log = "0.4"
rayon = "1.5.1"