[package]
name = "flooder"
version = "0.2.4"
authors = ["Cardinal Cryptography"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
sp-core = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v1.0.0", features = ["full_crypto"] }
sp-runtime = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v1.0.0" }

# other dependencies
serde_json = { version = "1.0" }
ws = { version = "0.9.1", features = ["ssl"] }
mio = { version = "0.6.14" }
zip = "0.5"
anyhow = "^1.0"
clap = { version = "3.0", features = ["derive"] }
codec = { package = 'parity-scale-codec', version = "3.0.0", features = ['derive'] }
env_logger = "0.8"
futures = { version = "0.3", features = ["alloc"] }
hdrhistogram = "7.3"
log = "0.4"
subxt = "0.30.1"
tokio = { version = "1.21.2", features = ["full"] }

aleph_client = { path = "../aleph-client" }
