[package]
name = "flooder"
version = "0.3.0"
authors = ["Cardinal Cryptography"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
anyhow = "^1.0"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
futures = { version = "0.3", features = ["alloc"] }
log = "0.4"
subxt = "0.30.1"
tokio = { version = "1.21.2", features = ["full"] }

aleph_client = { path = "../aleph-client" }
