[package]
name = "fork-off"
version = "0.2.0"
edition = "2021"

# client
[dependencies.substrate-api-client]
git = "https://github.com/Cardinal-Cryptography/substrate-api-client.git"
tag = "polkadot-v0.9.13.b2bfc0c3"

[dependencies]
# Substrate dependencies
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }

# other
anyhow = "1.0.52"
clap = {version = "3.0.6", features = ["derive"]}
env_logger = "0.8"
futures = "0.3.17"
hex = "0.4.3"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.0", features = ["full"]}
parking_lot = "0.12.0"
