[package]
name = "fork-off"
version = "1.4.0"
edition = "2021"
license = "Apache 2.0"

[dependencies]
anyhow = "1.0"
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { version = "3.0", features = ["derive"] }
codec = { package = 'parity-scale-codec', version = "3.0.0", default-features = false, features = ['derive'] }
env_logger = "0.8"
futures = "0.3.17"
hex = "0.4.3"
log = "0.4"
parking_lot = "0.12.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }

sp-core = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v1.0.0" }
frame-support = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v1.0.0" }
frame-system = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v1.0.0" }
pallet-balances = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v1.0.0" }
jsonrpc-core = "18.0"
jsonrpc-core-client = { version = "18.0", features = ["ws"] }
jsonrpc-derive = "18.0"
async-channel = "1.6"
