[package]
name = "jellyfier"
version = "0.0.0"
documentation = "https://docs.rs/?"
license = "Apache-2.0"
categories = ["cryptography"]
description = "Jellyfish PLONK verifier"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# we must use newer version of arkworks for jellyfish
ark-bls12-381 = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
parity-scale-codec = { workspace = true, features = ["derive"] }

sp-runtime-interface = { workspace = true }
jf-plonk = { workspace = true }

[dev-dependencies]
jf-plonk = { workspace = true, features = ["test-srs"] }
jf-relation = { workspace = true }
jf-utils = { workspace = true }

[features]
default = ["std"]
std = [
    "ark-bls12-381/std",
    "ark-serialize/std",
    "parity-scale-codec/std",
    "sp-runtime-interface/std",
]
