[package]
name = "pallet-aleph"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "1fa8cf7" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "1fa8cf7" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "1fa8cf7" }
serde = "1.0"
primitives = { package = "primitives", path = "../primitives", version = "0.1.0", default-features = false}
pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "1fa8cf7" }


[dev-dependencies]

pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "1fa8cf7" }
pallet-staking = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "1fa8cf7" }
pallet-staking-reward-curve = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "1fa8cf7" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "1fa8cf7" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "1fa8cf7" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "1fa8cf7" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "1fa8cf7" }
frame-election-provider-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "1fa8cf7" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "primitives/std",
    "pallet-session/std"
]