[package]
name = "peer-verification"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "signer"
path = "src/signer.rs"

[[bin]]
name = "verifier"
path = "src/verifier.rs"

[dependencies]
clap = {version = "3.0", features = ["derive"]}
hex = "0.4"
libp2p = "0.44"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = { version = "1.0" }
tokio = { version = "1.17", features = ["full"]}
