[package]
name = "liminal-ark-poseidon"
version = "0.1.0"
documentation = "https://docs.rs/liminal-ark-poseidon"
readme = "README.md"
license = "Apache-2.0"
categories = ["cryptography"]
description = "An instantiation of the Poseidon SNARK-friendly hash function."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
ark-bls12-381 = { workspace = true }
ark-ff = { workspace = true }
ark-r1cs-std = { workspace = true, optional = true }
ark-relations = { workspace = true, optional = true }
paste = { workspace = true }

liminal-ark-pnbr-sponge = { workspace = true, features = ["r1cs"], optional = true }
liminal-ark-pnbr-poseidon-parameters = { workspace = true }
liminal-ark-pnbr-poseidon-permutation = { workspace = true }

# For generation only
liminal-ark-pnbr-poseidon-paramgen = { workspace = true, optional = true }

[lib]
name = "liminal_ark_poseidon"

[[bin]]
name = "liminal-ark-poseidon-paramgen"
path = "src/generate_parameters.rs"
required-features = ["paramgen"]

[features]
default = ["std"]
std = [
    "ark-bls12-381/std",
    "ark-ff/std",
    "liminal-ark-pnbr-poseidon-parameters/std",
    "liminal-ark-pnbr-poseidon-permutation/std",
]
circuit = [
    "ark-r1cs-std",
    "ark-relations",
    "liminal-ark-pnbr-sponge",
]
circuit-std = [
    "circuit",
    "std",
    "ark-r1cs-std/std",
    "ark-relations/std",
    "liminal-ark-pnbr-sponge/std",
]
paramgen = [
    "std",
    "liminal-ark-pnbr-poseidon-paramgen/std",
]
