[package]
name = "liminal-ark-poseidon"
version = "0.1.0"
documentation = "https://docs.rs/liminal-ark-poseidon"
readme = "README.md"
license = "Apache-2.0"
categories = ["cryptography"]
description = "An instantiation of the Poseidon SNARK-friendly hash function."
authors = ["Cardinal", "Aleph Zero Foundation"]
edition = "2021"
homepage = "https://alephzero.org"
repository = "https://github.com/Cardinal-Cryptography/aleph-node"

[dependencies]
ark-bls12-381 = { version = "^0.3.0" }
ark-ff = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0" , default-features = false, optional = true }
ark-relations = { version = "^0.3.0", default-features = false, optional = true }

paste = { version = "1.0.11" }

liminal-ark-pnbr-poseidon-parameters = { version = "0.1.0", default-features = false }
liminal-ark-pnbr-poseidon-permutation = { version = "0.1.0", default-features = false }
liminal-ark-pnbr-sponge = { version = "0.3.0", default-features = false, features = ["r1cs"], optional = true  }

# For generation only
liminal-ark-pnbr-poseidon-paramgen = { version = "0.1.0", optional = true }

[lib]
name = "liminal_ark_poseidon"

[[bin]]
name = "liminal-ark-poseidon-paramgen"
path = "src/generate_parameters.rs"
required-features = ["paramgen"]

[features]
default = ["std"]
std = [
    "ark-bls12-381/std",
    "ark-ff/std",
    "liminal-ark-pnbr-poseidon-parameters/std",
    "liminal-ark-pnbr-poseidon-permutation/std",
]
circuit = [
    "ark-r1cs-std",
    "ark-relations",
    "liminal-ark-pnbr-sponge",
]
circuit-std = [
    "circuit",
    "std",
    "ark-r1cs-std/std",
    "ark-relations/std",
    "liminal-ark-pnbr-sponge/std",
]
paramgen = [
    "std",
    "liminal-ark-pnbr-poseidon-paramgen/std",
]
