[package]
name = "primitives"
version = "0.6.0"
authors = ["Cardinal Cryptography"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

sp-api = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.38" }
sp-application-crypto = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.38" }
sp-core = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.38" }
sp-runtime = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.38" }
sp-std = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.38" }
sp-staking = { default-features = false, git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.38" }

# Liminal-related dependencies
sp-runtime-interface = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.38", default-features = false, optional = true }
liminal-ark-poseidon = { path = "../poseidon", default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",

    "sp-api/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-staking/std",
]
short_session = []

# Liminal-related features
liminal = [
    "sp-runtime-interface",
    "liminal-ark-poseidon",
]
liminal-std = [
    "liminal",
    "std",
    "sp-runtime-interface/std",
    "liminal-ark-poseidon/std",
]
