[package]
name = "primitives"
version = "0.14.0+dev"
license = "Apache 2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }

sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }
sp-consensus-aura = { workspace = true }

frame-support = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }

pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

sp-version = { workspace = true }
sp-block-builder = { workspace = true }
sp-offchain = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-session = { workspace = true }
sp-inherents = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "serde/std",

    "sp-api/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-staking/std",
    "sp-consensus-aura/std",
    "sp-version/std",
    "sp-block-builder/std",
    "sp-offchain/std",
    "sp-transaction-pool/std",
    "sp-session/std",
    "sp-inherents/std",

    "frame-support/std",
    "frame-system-rpc-runtime-api/std",

    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",

]
short_session = []
