[package]
name = "rate-limiter"
version = "0.1.0"
license = "Apache 2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
futures = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["time"] }
