[package]
name = "liminal-ark-relations"
version = "0.1.0"
edition = "2021"
authors = ["Cardinal"]
documentation = "https://docs.rs/?"
homepage = "https://alephzero.org"
license = "Apache-2.0"
categories = ["cryptography"]
repository = "https://github.com/Cardinal-Cryptography/aleph-node"
description = "An instantiation of the Poseidon SNARK-friendly hash function."

[dependencies]
ark-bls12-381 = { version = "^0.3.0", default-features = false }
ark-crypto-primitives = { version = "^0.3.0", default-features = false, features = [ "r1cs" ] }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-ff = { version = "^0.3.0", default-features = false }
ark-gm17 = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-marlin = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-poly-commit = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
blake2 = { version = "0.9.2", default-features = false }
liminal-ark-relation-macro = { version = "0.1.0" }

liminal-ark-poseidon = { path = "../poseidon", default-features = false, features = ["circuit"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[features]
default = ["std"]
std = [
    "ark-bls12-381/std",
    "ark-crypto-primitives/std",
    "ark-ec/std",
    "ark-ed-on-bls12-381/std",
    "ark-ff/std",
    "ark-gm17/std",
    "ark-groth16/std",
    "ark-marlin/std",
    "ark-poly/std",
    "ark-poly-commit/std",
    "ark-r1cs-std/std",
    "ark-relations/std",
    "ark-relations/tracing-subscriber",
    "ark-serialize/std",
    "ark-std/std",
    "blake2/std",

    "liminal-ark-relation-macro/std",
    "liminal-ark-poseidon/std",
]
