[package]
name = "aleph-runtime-interfaces"
version = "0.1.0"
authors = ["Cardinal", "Aleph Zero Foundation"]
edition = "2021"
homepage = "https://alephzero.org"
repository = "https://github.com/Cardinal-Cryptography/aleph-node"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
log = { version = "0.4", default-features = false }

halo2_proofs = { git = "https://github.com/Cardinal-Cryptography/pse-halo2", branch = "aleph", default-features = false, features = ["mock-kzg-params"], optional = true }

sp-runtime-interface = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.2.0", default-features = false }

[dev-dependencies]
rand = { version = "0.8.5" }

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "sp-runtime-interface/std",
]
liminal = []
liminal-std = [
    "liminal",
    "std",
    "halo2_proofs",
]
