[package]
name = "aleph-runtime-interfaces"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }

halo2_proofs = { workspace = true, features = ["mock-kzg-params"], optional = true }

sp-runtime-interface = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[features]
default = ["std"]
std = [
    "log/std",
    "parity-scale-codec/std",
    "halo2_proofs",
    "sp-runtime-interface/std",
]
