[workspace]

[package]
name = "baby-liminal-extension-test-contract"
version = "0.1.0"
authors = ["Cardinal"]
edition = "2021"
homepage = "https://alephzero.org"
repository = "https://github.com/aleph-zero-foundation/aleph-node"
license = "Apache-2.0"
publish = false

[dependencies]
ink = { version = "5.0.0-rc", default-features = false }
baby-liminal-extension = { path = "../", features = ["ink"] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "baby-liminal-extension/ink-std",
]
ink-as-dependency = []
