[package]
name = "payout-stakers"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
aleph_client = { path = "../../aleph-client" }
primitives = { path = "../../primitives" }

sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", features = ["full_crypto"] }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
codec = { package = 'parity-scale-codec', version = "2.0.0", features = ['derive'] }

substrate-api-client = { git = "https://github.com/Cardinal-Cryptography/substrate-api-client.git", tag = "polkadot-v0.9.13.b2bfc0c3" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }


anyhow = "^1.0"
env_logger = "0.8"
log = "0.4"
rayon = "1.5.1"
