[package]
name = "payout-stakers"
version = "0.3.2"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
anyhow = "^1.0"
clap = { version = "3.0.0", features = ["derive"] }
codec = { package = 'parity-scale-codec', version = "3.0.0", features = ['derive'] }
env_logger = "0.8"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = "0.4"
futures = "0.3.25"
rand = "0.8.5"

sp-core = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.38", features = ["full_crypto"] }
sp-keyring = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.38" }

subxt = "0.25.0"
tokio = { version = "1.21.2", features = ["full"] }

aleph_client = { path = "../../aleph-client" }
primitives = { path = "../../primitives" }
