[package]
name = "access_control"
version = "0.3.0"
authors = ["Cardinal Cryptography"]
edition = "2021"
publish = false
license = "Apache 2.0"

[dependencies]
ink = { version = "=4.2.1",  default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

shared_traits = { path = "../shared_traits", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "access_control"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale-info/std",
    "scale/std",
    "shared_traits/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
