[package]
name = "blender"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"
homepage = "https://alephzero.org"
repository = "https://github.com/aleph-zero-foundation/aleph-node"
license = "Apache 2.0"
publish = false

[lib]
name = "blender"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ink_env = { version = "~3.4.0", default-features = false }
ink_lang = { version = "~3.4.0", default-features = false }
ink_metadata = { version = "~3.4.0", default-features = false, features = ["derive"], optional = true }
ink_prelude = { version = "~3.4.0", default-features = false }
ink_primitives = { version = "~3.4.0", default-features = false }
ink_storage = { version = "~3.4.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

ark-serialize = { version = "^0.3.0", default-features = false }

openbrush = { git = "https://github.com/Supercolony-net/openbrush-contracts", rev = "v2.3.0", default-features = false, features = ["psp22"] }

snarcos-extension = { path = "../../bin/runtime/src/chain_extension/snarcos-extension", default-features = false, features = ["ink-as-dependency"] }

[features]
default = ["std"]
std = [
    "ink_env/std",
    "ink_lang/std",
    "ink_metadata/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "ink_storage/std",

    "scale/std",
    "scale-info/std",

    "ark-serialize/std",

    "openbrush/std",

    "snarcos-extension/std",
]
ink-as-dependency = []
