[package]
name = "button_token"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"
publish = false

[dependencies]
ink_env = { version = "3.2.0", default-features = false }
ink_lang = { version = "3.2.0", default-features = false }
ink_lang_codegen = { version = "3.2.0", default-features = false }
ink_metadata = { version = "3.2.0", default-features = false, features = ["derive"], optional = true }
ink_prelude = { version = "3.2.0", default-features = false }
ink_primitives = { version = "3.2.0", default-features = false }
ink_storage = { version = "3.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

access_control = { path = "../access_control", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "button_token"
path = "lib.rs"
crate-type = [
  # Used for normal contract Wasm blobs.
  "cdylib",
  # Used for ABI generation.
  "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_lang_codegen/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
